fixed_alignment

--- a/flexbox.css
+++ b/flexbox.css
@@ -104,7 +104,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content:space-evenly;
-    align-items: center;
+    align-items:flex-start;
    }
 
    .work {
@@ -149,7 +149,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content:space-evenly;
-    align-items: center;
+    align-items:flex-start;
    }
 
    .work {
